# ai-financial-auditor

./: .gitignore  FIDELITY - OCT conv 1.xls  README.md  alembic.ini  main.py  pyproject.toml  reports.json  requirements.txt  taxrecon.db  temp_FIDELITY BANK - MARCH 2024 conv.xls  temp_REALTOR APPLICANT DATA.xlsx  temp_ZENITH - FEB 2024 conv.xls  vfg.db
alembic/: env.py
frontend/: .gitignore  dashboard.html  index.html  login.html  models.py
frontend/frontend/: index.html
frontend/login/: .html
helper/: database.py  main.py
helper/api/: auth.py  partner.py  report.py  start.sh  taxrecon_mock.py  upload.py
helper/api/v1/: routes.py
helper/core/: audit_engine.py  config.py  database.py  deps.py  security.py
helper/models/: __init__.py  anomaly.py  file.py  report.py  tax_record.py  transaction.py  user.py
helper/services/: audit_service.py  file_upload_service.py  reconciliation_service.py  report_service.py
helper/utils/: file_handler.py  logger.py
tests/: test_audit.py  test_reconciliation.py
uploads/: DAtatTest.xlsx  FIDELITY - OCT conv 2.xls
