[project]
name = "ai-financial-auditor"
version = "0.1.0"
description = "FastAPI project for an AI financial auditor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["fastapi", "ai", "financial", "auditor"]
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
]

[project.dependencies]
fastapi = "^0.111.3"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
python-dotenv = "^1.0.0"
openai = "^1.0.0"
pydantic = "^2.8.0"
httpx = "^0.26.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
